# simple_arms

./: README.md
simple_arm_server/: CMakeLists.txt  package.xml
simple_arm_server/action/: MoveArm.action
simple_arm_server/launch/: arm_server.launch
simple_arm_server/msg/: ArmAction.msg
simple_arm_server/nodes/: constraint_aware_simple_arm_server.py  simple_arm_server.py  simple_arm_server_test.py
simple_arm_server/src/: simple_move_arm_server.cpp
simple_arm_server/srv/: GetTrajectoryValidity.srv
